# nn-yandex-foundation

./: .gitignore  Cargo.toml  Contributing.md  Contributing_ru.md  LICENSE.md  README.md
core/src/: lib.rs
example/: Cargo.toml
example/src/: image_generation.rs  main.rs  text_generation.rs
nn_yandex_art/: Cargo.toml  LICENSE_RU.md  README.md
nn_yandex_art/src/: lib.rs
nn_yandex_art/src/error/: mod.rs
nn_yandex_art/src/models/request/: aspect_ratio.rs  generation_options.rs  message.rs  mod.rs  types.rs
nn_yandex_gpt/: Cargo.toml  README.md
nn_yandex_gpt/src/: lib.rs
nn_yandex_gpt/src/models/: mod.rs
nn_yandex_gpt/src/models/message/: mod.rs
nn_yandex_gpt/src/models/request/: mod.rs
src/: lib.rs
templates/: Cargo.toml
templates/src/: lib.rs
test_examples/: Cargo.toml
test_examples/src/: main.rs
text_generation/: Cargo.toml
text_generation/src/: lib.rs
text_generation/src/models/: mod.rs
text_generation/src/models/message/: mod.rs
text_generation/src/models/request/: mod.rs
text_generation/src/models/request/message/: mod.rs
text_generation/src/models/response/: mod.rs
yandex_art/: Cargo.toml
yandex_art/src/: lib.rs
yandex_art/src/models/request/: mod.rs
yandex_art/src/models/response/: mod.rs
