[package]
name = "nn_yandex_foundation"
version = "0.1.0"
edition = "2024"
authors = ["Artem Gafarov <gafarov.neuron.nexus@gmail.com>"]
description = "Unified library for working with Yandex Foundation Models (Единая библиотека для работы с Yandex Foundation Models)"
license = "MIT"
repository = "https://github.com/neuron-nexus-agregator/nn-yandex-foundation"

[workspace]
members = [ "example",
    "nn_yandex_art",
    "nn_yandex_gpt"
, "templates"]

[dependencies]
nn_yandex_art = { path = "nn_yandex_art" }
nn_yandex_gpt = { path = "nn_yandex_gpt" }
