[package]
name = "nn_yandex_art"
version = "0.1.0"
edition = "2024"
authors = ["Artem Gafarov <gafarov.neuron.nexus@gmail.com>"]
description = "Library for working with Yandex ART API"
license = "MIT"
repository = "https://github.com/neuron-nexus-agregator/nn-yandex-foundation"

[dependencies]
reqwest = { version = "0.12.23", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.143"
time = { version = "0.3", features = ["parsing", "serde"] }