[package]
name = "nn_yandex_gpt"
version = "0.1.0"
edition = "2024"
authors = ["Artem Gafarov <a.m.gafarov@ya.ru>"]
description = "Unified library for working with Yandex Foundation Models (Единая библиотека для работы с Yandex Foundation Models)"
license = "MIT"
repository = "https://github.com/neuron-nexus-agregator/nn_yandex_foundation"

[dependencies]
reqwest = { version =  "0.12.23", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.143"
serde_as = "0.0.1"
serde_with = "3.14.0"
